--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -6,10 +6,13 @@ dependencies:
   - python=3.7
   - pytorch
   - torchvision
-  - cpuonly
   - matplotlib
   - pillow
   - opencv
   - ipython
   - tqdm
   - pip
+  - pip:
+    - pysimplegui
+    - opencv-contrib-python==4.0.0.21
+    - git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI
