--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,27 @@ __pycache__/
 
 # C extensions
 *.so
+
+# Data + Env
 coco/**
+environment/bin/**
+environment/compiler_compat/**
+environment/conda-meta/**
+environment/doc/**
+environment/etc/**
+environment/include/**
+environment/libexec/**
+environment/man/**
+environment/mkspecs/**
+environment/phrasebooks/**
+environment/qml/**
+environment/resources/**
+environment/share/**
+environment/ssl/**
+environment/translations/**
+image_ids.pkl
+data_subset.zip
+
 # Distribution / packaging
 .Python
 build/
