Fixed name error with pytorch

--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - ipython
   - tqdm
   - pip
-  - pytorch::pcytorch
+  - pytorch::pytorch
   - pytorch::torchvision
   - pip:
     - pysimplegui
